Update textbasedthings.md